--- a/slides.Rmd
+++ b/slides.Rmd
@@ -118,12 +118,9 @@ La documentation `utilitR` vise à répondre à deux questions :
 A COMPLETER
 
 Documentation qui prend plusieurs formes (site internet, et brochure).
-Les recommandations sont donc adaptées au contexte de travail des agents du service statistique public
+Les recommandations sont adaptées au contexte de travail des agents du service statistique public.
 
 
-<!-- .sauterligne[ -->
-<!-- Trois caractéristiques importantes : -->
-<!-- ] -->
 
 <!-- - Cette documentation est principalement destinée aux agents du Service statistique public (mais pas exclusivement). Les recommandations sont donc adaptées au contexte de travail des agents du service statistique public ; -->
 <!-- - Cette documentation est issue de la mise en commun des connaissances des agents du SSP sur `R` dans une approche collaborative, sur le modèle de Wikipedia ; -->
@@ -170,7 +167,10 @@ __Le projet `utilitR` est un laboratoire qui préfigure les évolutions des mét
 # Contenu de la documentation
 ## Une documentation en deux grandes parties
 
+La documentation `utilitR` vise à répondre à deux grandes questions :
 
+- Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème ;
+- Comment réaliser efficacement des tâches élémentaires avec `R`.
 
 ---
 # Contenu de la documentation
@@ -230,7 +230,26 @@ __Le projet `utilitR` est un laboratoire qui préfigure les évolutions des mét
 # Contenu de la documentation
 ## Première partie : comment (bien) travailler avec `R`
 
-__METTRE ICI DES ELEMENTS SUR LES TUTORIELS__
+La documentation présente `R` et RStudio, mais également tout l'écosystème informatique autour de `R`, afin d'aider les agents à être autonomes :
+
+- Présentation des environnements informatiques d'usage disponibles à l'Insee (AUSv3 et SSP Cloud) ;
+- Tutoriels détaillés sur l'usage des projets RStudio, la configuration de `Git` et l'utilisation de `Git` avec RStudio ;
+- Fiches-conseils sur comment choisir un _package_, chercher de l'aide et se documenter.
+
+---
+# Contenu de la documentation
+## Première partie : comment (bien) travailler avec `R`
+
+Les spécificités informatique de l'Insee sont signalées dans des boîtes colorées.
+
+.specificite[
+Une forge interne `GitLab` est accessible depuis AUS. Son adresse, ainsi que des éléments complémentaires à cette fiche, sont disponibles dans la documentation AUS (`Y:/Documentation/AUSV3/`).
+]
+
+--
+
+SSM
+
 
 ---
 # Contenu de la documentation
