--- a/slides.Rmd
+++ b/slides.Rmd
@@ -545,7 +545,7 @@ knitr::include_graphics("./resources/githubCI.png")
 <!-- (`.Rmd` ➜ `.md` ➜ `.html`) ; -->
 <!-- (`.md` ➜ `.html` ➜ `.pdf`) ; -->
 
-* Les codes sources de la documentation prennent la forme de fichiers `R Markdown` ;
+* Les codes sources de la documentation prennent la forme de fichiers `R Markdown`, qui rassemblent les textes et les exemples de codes ;
 * `R` compile ces codes sources de deux manières :
     + Production d'un site internet grâce au _package_ `blogdown` ;
     + Production d'un livre en format A4 grâce au _package_ `pagedown` ;
@@ -555,7 +555,7 @@ knitr::include_graphics("./resources/githubCI.png")
 --
 
 <br>
-* Multiples avantages :
+* Avantages :
     + le livre et le site web sont générés à partir des mêmes codes sources ;
     + L'utilisation des outils technologies Web permet de ne pas utiliser `LaTeX` ;
     + Le projet `utilitR` a induit des évolutions de l'écosystème `R Markdown` qui bénéficient à de nombreux utilisateurs.
