--- a/slides.Rmd
+++ b/slides.Rmd
@@ -474,9 +474,9 @@ La documentation est diffusée sous trois formes :
 .sauterligne2[
 Questions :
 
-- Quel format de diffusion préférez-vous ?
-- La version intégrale de la documentation vous serait-t-elle utile, sachant que chaque fiche est déjà disponible en format A4 imprimable ?
-- Une version __imprimée et millésimée__ de la brochure (350 pages) vous serait-elle utile ?
+- `r fontawesome::fa("fas fa-question")` Quel format de diffusion préférez-vous ?
+- `r fontawesome::fa("fas fa-question")` La version intégrale de la documentation vous serait-t-elle utile, sachant que chaque fiche est déjà disponible en format A4 imprimable ?
+- `r fontawesome::fa("fas fa-question")` Une version __imprimée et millésimée__ de la brochure (350 pages) vous serait-elle utile ?
 
 ]
 
