Inverser deux slides

--- a/slides.Rmd
+++ b/slides.Rmd
@@ -90,7 +90,7 @@ kbl(description_appariement, align = "cll",
 
 
 ---
-# Introduction
+# Introduction : origine du projet
 
 Le projet `utilitR` est parti de deux constats : 
 
@@ -108,7 +108,7 @@ Axelle Chauvet et largement diffusée à l’Insee et dans le SSP, n'a pas d'éq
     + La documentation sur `R` est riche mais propose peu d'exemples sur données réelles, proches des cas d'usage des agents.
     
 ---
-# Introduction
+# Introduction : objectif du projet
 
 Le projet `utilitR` a pour objectif de produire une documentation qui réponde à deux questions :
 
@@ -177,6 +177,16 @@ La documentation `utilitR` vise à répondre à deux grandes questions :
 
 ---
 # Contenu de la documentation
+## Première partie : comment (bien) travailler avec `R`
+
+La première partie de la documentation présente non seulement l'usage de `R` et de RStudio, mais également tout l'écosystème informatique autour de `R`, afin d'aider les agents à être autonomes :
+
+- Présentation des environnements informatiques d'usage disponibles à l'Insee (AUSv3 et SSP Cloud) ;
+- Tutoriels détaillés sur l'usage des projets RStudio, la configuration de `Git` et l'utilisation de `Git` avec RStudio ;
+- Fiches-conseils sur comment choisir un _package_, chercher de l'aide et se documenter.
+
+---
+# Contenu de la documentation
 
 ## Première partie : comment (bien) travailler avec `R`
 
@@ -228,16 +238,6 @@ La documentation `utilitR` vise à répondre à deux grandes questions :
 </tbody>
 </table>
 ]
-
----
-# Contenu de la documentation
-## Première partie : comment (bien) travailler avec `R`
-
-La documentation présente `R` et RStudio, mais également tout l'écosystème informatique autour de `R`, afin d'aider les agents à être autonomes :
-
-- Présentation des environnements informatiques d'usage disponibles à l'Insee (AUSv3 et SSP Cloud) ;
-- Tutoriels détaillés sur l'usage des projets RStudio, la configuration de `Git` et l'utilisation de `Git` avec RStudio ;
-- Fiches-conseils sur comment choisir un _package_, chercher de l'aide et se documenter.
 
 ---
 # Contenu de la documentation
