--- a/soumissions/2021_04_30_rencontresR.Rmd
+++ b/soumissions/2021_04_30_rencontresR.Rmd
@@ -17,7 +17,8 @@ Le projet `utilitR` se distingue d'une documentation classique en proposant
 une approche par tâche  (importer, manipuler des données, réaliser des
 graphiques, cartes, etc.), sur données réelles,
 avec des recommandations précises sur les packages
-à privilégier et des conseils sur les bonnes pratiques ou la démarche à adopter.
+à privilégier et des conseils sur les bonnes pratiques ou la démarche à adopter
+face à un jeu de données.
 
 Les fonctionnalités les plus avancées de l'écosystème `R Markdown`
 (principalement `bookdown`, `blogdown` et `pagedown`)
@@ -42,7 +43,7 @@ spontanée afin de proposer une documentation à partir de cas
 d'usages. L'objectif de la documentation est de proposer un ensemble
 de recommandations et de conseils pour l'usage de `R` sur données réelles
 dans un cadre de travail collectif. Pour cela, un package facilitant
-l'accès aux données du site <insee.fr>, à savoir `doremifasol`, a
+l'accès aux données du site `insee.fr`, à savoir `doremifasol`, a
 vu le jour. Ce dernier permet que l'ensemble des
 des tâches évoquées (importer des données, manipuler celles-ci avec le `tidyverse` ou
 `data.table`, communiquer avec `ggplot` ou `R Markdown`...) soient illustrées avec
@@ -70,21 +71,35 @@ valorisation du travail de données: visualisation, production de sorties
 
 Dans le champ de la statistique publique, la démarche `utilitR` est originale.
 Il s'agit d'une démarche spontanée, collaborative et ouverte.
-Outre les contenus, 
-l'ensemble des débats ont lieu sur `Github`. Les recommandations et orientations
+Outre la mise à disposition des fichiers source, `Github` sert à héberger 
+l'ensemble des débats entre contributeurs. Les recommandations et orientations
 stratégiques sont discutées dans le dépôt et 
 ouvertes à des contributeurs au-delà du système statistique public. 
 Au sein de l'Insee, l'approche est originale car elle ne repose pas sur 
-une organisation hiérarchique. Au sein de l'Insee, des chefs peuvent
-soutenir l'initiative, ses valeurs et l'aider à disposer de moyens ou d'une publicité 
+une organisation hiérarchique. En interne, des chefs peuvent
+soutenir l'initiative, ses valeurs (disponibles dans un manifeste)
+et l'aider à disposer de moyens ou d'un appui 
 interne. Ces sponsors ne contrôlent cependant pas le contenu de la documentation
 et ses orientations stratégiques qui sont du ressort du groupe des contributeurs.
+Cette organisation ouverte et collaborative sert de laboratoire aux futurs 
+projets de l'institut adoptant une démarche *open-source*. 
+En acculturant une vingtaine de contributeurs
+à mener un projet opensource, `utilitR` préfigure les futures méthodes
+de diffusion des travaux statistiques.
 
-Github CI
+Le processus de publication du contenu est exigeant et repose sur
+les principes du CI/CD. Afin de reproduire la documentation
+dans de multiples contextes, une image `Docker` est construite avec toutes les
+dépendances nécessaires. Les mêmes fichiers sources servent à construire
+le site web (à partir de `bookdown`) et une version PDF 
+(à partir de `pagedown`). Un package de *templates*, disponible sur `Github`,
+sert à contrôler le comportement de `R Markdown`. L'originalité
+de cette approche est qu'elle s'appuie, y compris pour la version PDF,
+exclusivement sur du CSS et non sur `LateX`. 
+Le site web est déployé
+en continu avec `Netlify`. Ce processus d'automatisation a permis quelques
+innovations dans l'éco-système `R Markdown`, notamment une évolution du
+fonctionnement de `pagedown` permettant de ne plus être limité par
+la taille du document et ainsi envisager la généralisation de livres 
+ne reposant plus sur `LaTeX`.  
 
-
-
-R markdown
-
-
-## Références
