--- a/slides.Rmd
+++ b/slides.Rmd
@@ -9,6 +9,8 @@ output :
     css: custom.css
     includes :
       after_body : insert-logo.html
+    self_contained: false
+    copy_resources: true
 ---
 # Introduction
 
@@ -630,3 +632,5 @@ background-size: 7cm
 background-position: 8.5cm 3cm
 
 # Merci !
+
+\ 
