--- a/slides.Rmd
+++ b/slides.Rmd
@@ -10,8 +10,7 @@ output:
     css: custom.css
     includes:
       after_body: insert-logo.html
-    self_contained: false
-    copy_resources: true
+    self_contained: true
     lib_dir: "public"
 ---
 # Introduction
