--- a/slides-colab.Rmd
+++ b/slides-colab.Rmd
@@ -1,6 +1,6 @@
 ---
 title : "__`utilitR`__"
-subtitle : "Une documentation sur `R` à l’usage des statisticiens publics"
+subtitle : "Une documentation collaborative sur `R`"
 author : "Lino Galiana, Olivier Meslin"
 institute : "Insee"
 date : "`r format(Sys.time(), '%d %B %Y')`"
@@ -10,6 +10,7 @@ output :
     includes :
       after_body : insert-logo.html
 ---
+
 # Introduction
 
 ```{r setup, include=FALSE}
@@ -25,11 +26,12 @@ Le projet `utilitR` vise à produire une documentation collaborative sur `R`, de
 Plan de la présentation :
 ]
 
+<!-----
 - Objectif et spécificités du projet ;
 - Contenu de la documentation ;
 - Modes de diffusion de la documentation ;
 - Fonctionnement du projet `utilitR`.
-
+----->
 
 
 ```{r, echo = FALSE, warning = FALSE, eval = FALSE}
@@ -89,46 +91,6 @@ kbl(description_appariement, align = "cll",
 ```
 
 
----
-# Introduction : origine du projet
-
-Le projet `utilitR` est parti de deux constats : 
-
-1. **La transition des agents vers `R` est freinée par une multiplicité d’obstacles** :
-    + Eclatement de la documentation de l'écosystème `R` ;
-    + Multiplicité de *packages*, de qualité variable et parfois redondants ;
-    + Barrière linguistique : la grande majorité de la documentation est en anglais ;
-    + Diversité des cas d'usage de `R` à l'Insee et dans le SSP ;
-    
---
-
-2. **Face à ces difficultés, il n'existe pas de documentation de référence sur l'usage de `R` par les statisticiens** :
-    +  La documentation de référence sur `SAS` en français, rédigée par
-Axelle Chauvet et largement diffusée à l’Insee et dans le SSP, n'a pas d'équivalent en `R` ;
-    + La documentation sur `R` est riche mais propose peu d'exemples sur données réelles, proches des cas d'usage des agents.
-    
----
-# Introduction : objectif du projet
-
-Le projet `utilitR` a pour objectif de produire une documentation qui réponde à deux questions :
-
-- Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème ;
-- Comment réaliser efficacement des tâches élémentaires avec `R`.
-
-<br>
-Cette documentation cherche par ailleurs à respecter trois exigences :
-
-- exister en différents formats pour s'adapter aux besoins des agents ;
-- être proche des cas d'usage de `R` dans la statistique publique ;
-- proposer des recommandations adaptées au contexte de travail des agents du service statistique public.
-
-
-
-
-<!-- - Cette documentation est principalement destinée aux agents du Service statistique public (mais pas exclusivement). Les recommandations sont donc adaptées au contexte de travail des agents du service statistique public ; -->
-<!-- - Cette documentation est issue de la mise en commun des connaissances des agents du SSP sur `R` dans une approche collaborative, sur le modèle de Wikipedia ; -->
-<!-- - Cette documentation n'est pas une introduction théorique au langage `R`, mais un guide pratique pour le statisticien. Elle ne se substitue donc pas à l'offre de formation existante sur `R`, mais la complète. -->
-
 
 ---
 # Introduction : apports du projet
@@ -166,298 +128,7 @@ Cette documentation cherche par ailleurs à respecter trois exigences :
 
 __Le projet `utilitR` est un laboratoire qui préfigure les évolutions des méthodes de travail des statisticiens.__
 
----
-# Contenu de la documentation
-## Une documentation en deux grandes parties
 
-La documentation `utilitR` vise à répondre à deux grandes questions :
-
-- Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème ;
-- Comment réaliser efficacement des tâches élémentaires avec `R`.
-
----
-# Contenu de la documentation
-## Première partie : comment (bien) travailler avec `R`
-
-La première partie de la documentation présente non seulement l'usage de `R` et de RStudio, mais également tout l'écosystème informatique autour de `R`, afin d'aider les agents à être autonomes :
-
-- Présentation des environnements informatiques d'usage disponibles à l'Insee (AUSv3 et SSP Cloud) ;
-- Tutoriels détaillés sur l'usage des projets RStudio, la configuration de `Git` et l'utilisation de `Git` avec RStudio ;
-- Fiches-conseils sur comment choisir un _package_, chercher de l'aide et se documenter.
-
----
-# Contenu de la documentation
-
-## Première partie : comment (bien) travailler avec `R`
-
-.small90[
-<table class="table" style="margin-left: auto; margin-right: auto;">
- <thead>
-  <tr>
-   <th style="text-align:center;text-align: center;"> Partie </th>
-   <th style="text-align:left;text-align: center;"> Fiches </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="4"> Utiliser <code class="remark-inline-code">R</code> à l’Insee </td>
-   <td style="text-align:left;width: 12cm; "> Les environnements de travail avec <code class="remark-inline-code">R</code> à l'Insee : AUSv3 et SSP Cloud </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Configurer <code class="remark-inline-code">Git</code> et Gitlab </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Personnaliser la configuration de <code class="remark-inline-code">R</code> </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Gérer les ressources informatiques avec <code class="remark-inline-code">R</code> </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="5"> Mener un projet statistique avec <code class="remark-inline-code">R</code> </td>
-   <td style="text-align:left;width: 12cm; "> Utiliser les projets RStudio </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser <code class="remark-inline-code">Git</code> et Gitlab avec RStudio </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Installer des packages et gérer les dépendances </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Choisir des packages </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Demander de l'aide et se documenter </td>
-  </tr>
-</tbody>
-</table>
-]
-
----
-# Contenu de la documentation
-## Première partie : comment (bien) travailler avec `R`
-
-Les spécificités informatique de l'Insee sont signalées dans des boîtes colorées.
-
-.small90[
-.specificite[
-Une forge interne `GitLab` est accessible depuis AUS. Son adresse, ainsi que des éléments complémentaires à cette fiche, sont disponibles dans la documentation AUS (`Y:/Documentation/AUSV3/`).
-]
-]
-
---
-
-.sauterligne[
-Les éléments spécifiques à l'Insee sont bien isolés du reste de la documentation, de façon à ce que les services statistiques ministériels puissent se l'approprier aisément.
-]
-
-
----
-# Contenu de la documentation
-## Seconde partie : réaliser les tâches élémentaires avec `R`
-
-.small90[
-<table class="table" style="margin-left: auto; margin-right: auto;">
- <thead>
-  <tr>
-   <th style="text-align:center;text-align: center;"> Partie </th>
-   <th style="text-align:left;text-align: center;"> Fiches </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="3"> Importer des données </td>
-   <td style="text-align:left;width: 12cm; "> Importer des données (SAS, csv, txt, odt, xlsx...) </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser une API </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser des bases de données </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="5"> Manipuler des données </td>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données avec <code class="remark-inline-code">data.table</code> </td>
-  </tr>
-   <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données avec le <code class="remark-inline-code">tidyverse</code> </td>
-   <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données textuelles </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données spatiales</td>
-   </tr>
-  <tr>
-   <td style="text-align:left;width: 12cm; "> Utiliser des données d'enquête </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="3"> Produire des <em>outputs</em> </td>
-   <td style="text-align:left;width: 12cm; "> Réaliser des graphiques </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Rédiger des documents avec <code class="remark-inline-code">R Markdown</code>  </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Produire des rapports automatisés </td>
-  </tr>
-</tbody>
-</table>
-]
-
----
-# Contenu de la documentation
-## Contenu des fiches
-
-Les fiches de la documentation ont un certain nombre de caractéristiques communes :
-
-- Elles formulent des recommandations précises et présentent en détail les outils et _packages_ adaptés ;
-- Elles proposent des exemples reproductibles utilisant des données de l'Insee pour aider les agents à s'approprier les outils ;
-- Elles comportent des conseils et des remarques relatifs aux bonnes pratiques ;
-- Elles donnent des indications sur les spécificités informatiques de l'Insee.
-
----
-# Contenu de la documentation
-## Des recommandations précises
-
-.sauterligne[
-
-- Les fiches commencent systématiquement par des **recommandations** sur les outils et les _packages_ à utiliser ou à éviter. 
-- Elles indiquent dans quelles situations et sous quelles conditions un _package_ doit être utilisé.
-- Ces recommandations sont cohérentes avec celles du COPS (Comité de certification des _packages_ `R`).
-]
-
---
-
-.sauterligne[
-Voici les recommandations de la fiche "Importer des fichiers plats" :
-.small90[
-.indent[
-.recommandation[
-* Pour importer des données de taille réduite (jusqu'à 1 Go), il est recommandé d'utiliser les fonctions `read_csv()` et `read_delim()` du *package* `readr` ;
-* Pour importer des données de taille plus importante (supérieure à 1 Go), il est recommandé d'utiliser la fonction `fread()` du *package* `data.table`.
-* L'usage du *package* `csvread` est déconseillé, de même que l'utilisation des fonctions natives de `R` `read.csv()` et `read.delim()`.
-]
-]
-]
-]
-
----
-# Contenu de la documentation
-## Une présentation détaillée des outils recommandés
-
-Les fiches présentent en détail les outils et les _packages_ recommandés (cas d'usage, principales options).
-
---
-
-.sauterligne[
-Le *package* `data.table` permet d'importer des fichiers plats avec la fonction `fread()`. Cette fonction présente trois avantages [...]
-]
-
---
-
-
-.sauterligne[
-Les principales options de `fread()` sont les suivantes :
-]
-.small90[
-| Argument         | Valeur par défaut                           | Fonction                                                              |
-|------------------|---------------------------------------------|-----------------------------------------------------------------------|
-| `file`             | Aucune                                      | Le chemin du fichier à importer                                       |
-| `nrows`            | `Inf`                                         | Nombre maximum de lignes à importer (pas de limite par défaut)        |
-| `select`           | `NULL`                                        | Sélectionner les colonnes à importer                                  |
-| `encoding`         | `"unknown"`                                   | Définir l'encodage du fichier (`"UTF-8"` ou `"Latin-1"`)                                        |
-]
-
----
-# Contenu de la documentation
-## Des exemples reproductibles et proches des cas d'usage
-
-La documentation comporte de nombreux exemples. Ces exemples ont trois particularités :
-
-- Les exemples sont **reproductibles** : les agents peuvent reproduire la plupart des exemples de la documentation en en exécutant le code ;
-- Les exemples sont **proches des cas d'usages de `R` dans le SSP** : les jeux de données utilisés dans les exemples sont issus de données disponibles sur [insee.fr](www.insee.fr) (code officiel géographique, base permanente des équipements, répertoire Filosofi) ;
-- Les jeux d'exemple sont **disponibles dans tous les environnements de travail** (SSP Cloud, AUSv3, poste local). Ils sont mis à disposition dans le _package_ `doremifasolData` développé par Pierre Lamarche et Pierre-Yves Berrard.
-
----
-# Contenu de la documentation
-## Des exemples reproductibles et proches des cas d'usage
-
-```{r, echo = FALSE}
-# On augmente le nombre de lignes imprimées pour faire apparaître deux catégories
-options(tibble.print_min = 6)
-options(tibble.print_max = 6)
-options(dplyr.print_min  = 6)
-options(dplyr.print_max  = 6)
-```
-
-```{r, echo = TRUE, warning = FALSE, message = FALSE, eval = FALSE}
-library(doremifasolData)
-library(magrittr)
-library(dplyr)
-
-nombre <- doremifasolData::bpe_ens_2018 %>%
-  as_tibble() %>%
-  filter(TYPEQU == "B316") %>% 
-  group_by(DEP) %>% 
-  summarise(nombre_station_serv = sum(NB_EQUIP, na.rm = TRUE)) 
-nombre
-```
-
---
-
-```{r, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
-library(doremifasolData)
-library(magrittr)
-library(dplyr)
-
-nombre <- doremifasolData::bpe_ens_2018 %>%
-  as_tibble() %>%
-  filter(TYPEQU == "B316") %>% 
-  group_by(DEP) %>% 
-  summarise(nombre_station_serv = sum(NB_EQUIP, na.rm = TRUE)) 
-nombre
-```
-
----
-# Contenu de la documentation
-## Conseils et remarques
-
-Les fiches contiennent des **conseils** et des **remarques** avec trois objectifs :
-- orienter les agents en fonction de leur niveau en `R` ;
-- aider les agents à s'approprier l'environnement `R` ;
-- indiquer les bonnes pratiques à adopter.
-
---
-
-.small90[
-.indent[
-.conseil[
-Si vous êtes complètement débutants en `R`, il est recommandé d'utiliser l'utilitaire d'importation de ` RStudio`. Une fois que les données sont correctement importées, vous pourrez copier-coller le code dans votre script `R` et vous familiariser avec les fonctions du *package* `readr`.
-]
-
-.remarque[
-Il est nettement plus simple de sélectionner des colonnes avec `fread()` qu'avec les fonctions du *package* `readr`. Il est donc recommandé d'utiliser `fread()` lorsque vous souhaitez sélectionner facilement les colonnes à importer.
-]
-
-<!-- .specificite[ -->
-<!-- La direction générale de l'Insee est située à Montrouge. -->
-<!-- ] -->
-]
-]
-
-<!-- IL FAUDRAIT METTRE UN EXEMPLE DE CODE -->
-
-    
 ---
 # Diffusion de la documentation
 
@@ -469,44 +140,10 @@ La documentation est diffusée sous trois formes :
 
 <br> Il est envisagé que le site internet soit actualisé en continu, tandis que la brochure pdf serait publiée de façon ponctuelle et millésimée.
 
---
-
-.sauterligne2[
-Questions :
-
-- `r fontawesome::fa("fas fa-question")` Quel format de diffusion préférez-vous ?
-- `r fontawesome::fa("fas fa-question")` La version intégrale de la documentation vous serait-t-elle utile, sachant que chaque fiche est déjà disponible en format A4 imprimable ?
-- `r fontawesome::fa("fas fa-question")` Une version __imprimée et millésimée__ de la brochure (350 pages) vous serait-elle utile ?
-
-]
-
 
 ---
 # Fonctionnement du projet
-## Positionnement du projet `utilitR` à l'Insee
 
-- Le projet est l’une des multiples initiatives lancées pour faciliter la transition vers `R` : 
-  + Supports du groupe de travail USSR ;
-  + FunCamp développé par la Division Innovation et Instruction Technique (Diit) ;
-  + Guide à l'usage du statisticien débutant (rédigé par Cédric Afsa) ;
-  + Formation Travail collaboratif avec `R` (en cours de test avant déploiement).
-
---
-
-- Les recommandations de *packages* sont cohérentes avec celles du Comité de certification des _packages_ `R` (COPS).
-
---
-
-- La documentation est adaptée à l’environnement informatique du statisticien :
-  + Description des environnements de travail (AUSv3 et SSP Cloud) ;
-  + Présentation des outils assurant la qualité des programmes en `R` comme les `Rprojects` et le contrôle de version avec `git` et Gitlab.
-
---
-
-- L'articulation entre `utilitR` et l'offre de formation sur `R` n'est pas encore clairement établie.
-
----
-# Fonctionnement du projet
 ## Organisation du projet
 
 **Le projet `utilitR` est un projet collaboratif, horizontal, _open source_ et ouvert à tous, auquel tous les agents peuvent contribuer.**
